tests/mm0_mmu/fail/bad-sort2134.mmu
-- bad modifier order
(sort s2134 strict pure provable free)